# h2ogpte-mcp-server

./: .gitignore  CODEOWNERS  LICENSE   Makefile  README.md  cy_build.py  pyproject.toml  requirements.txt
src/h2ogpte_mcp/: __init__.py
src/h2ogpte_mcp_server/: __init__.py  server.py  settings.py  tools.py
