[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "h2ogpte-mcp-server"
description = "MCP API server for h2oGPTe"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["h2ogpte", "mcp", "mcp-server", "llm"]
authors = [
    { name = "H2O.ai, Inc.", email = "support@h2o.ai" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version", "dependencies"]
license = "Apache-2.0"
license-files = [
    "LICENSE",
]

[project.scripts]
h2ogpte-mcp-server = "h2ogpte_mcp_server:main"

[project.urls]
Source = "https://github.com/h2oai/h2ogpte-mcp-server"
Issues = "https://github.com/h2oai/h2ogpte-mcp-server/issues"
Documentation = "https://github.com/h2oai/h2ogpte-mcp-server?tab=readme-ov-file"

[tool.setuptools.dynamic]
version = { attr = "h2ogpte_mcp_server.__version__" }
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
